client/src/index.scss
/* ... */
textarea {
  font-size: 12px;
  font-family: "IBM Plex Sans", sans-serif;
}

button {
  white-space: nowrap;
}

html,
body,
#root,
.App {
  height: 100%;
  scroll-behavior: smooth;
}

.App {
  display: flex;
  flex-direction: row;

  &.isBlur {
    filter: blur(3px);
  }
}

.sidebarArea {
  flex: 0 0 250px;
  z-index: 100;
}

.sidebar {
  height: 100%;
  display: flex;
  flex-direction: column;
  border-right: 1px solid #dddddd;

  &__row {
    flex: 0 0 0px;
    border-bottom: 1px solid #dddddd;
  }
}

.addUserSidebarItem {
  height: 60px;
  display: flex;
  flex-direction: row;
  cursor: pointer;
  .addUserSidebarItemIcon {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    font-size: 35px;
    padding: 10px;
    color: rgb(194, 194, 194);
    transition: transform 0.1s linear;
    position: relative;
  }
  .addUserSidebarItemContent {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 10px 10px 10px 5px;
  }
  &:hover {
    .addUserSidebarItemIcon {
      transform: scale(1.1);
    }
  }
}

.chatParticipant {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: row;
  cursor: pointer;
  &__avatar {
    flex: 0 0 35px;
    padding: 10px;
  }

  &__content {
    flex: 1 0 0;
    padding: 10px 10px 10px 5px;
    display: flex;
    flex-direction: row;
    font-weight: bold;
    align-items: center;
  }
}

.chatParticipantMini {
  margin-right: 5px;
}

.messageThreadHeader {
  height: 49px;
  display: flex;
  flex-direction: row;
  padding: 0px;
  padding-left: 2em;
  background-color: white;
  margin-bottom: 1em;
  &__info {
    display: flex;
    flex-direction: row;
    align-items: center;
    flex: 1 0 0;
  }
  &__actions {
    flex: 0 0 0;
    padding-right: 10px;
    display: flex;
    flex-direction: row;
    align-items: center;
  }
  &__title {
    h1 {
      position: relative;
      display: inline-block;
      margin: 0px;
      margin-right: 30px;
      padding: 0px;

      font-size: 1.5em;
      cursor: pointer;
      .messageThreadHeader__editIcon {
        position: absolute;
        top: 0;
        right: -25px;
        color: #cacaca;
      }
      &:hover {
        background: #E9E8F0;
        border-radius: 2px;

        &.messageThreadHeader__editIcon {
          display: block !important;
        }
      }
    }
  }
  &__actionButton {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    width: 35px;
    height: 35px;
    background: rgb(194, 194, 194);
    color: white;
    border-radius: 17.5px;
    margin-right: 5px;
    cursor: pointer;
    transition: transform 0.1s linear;
    &:hover {
      transform: scale(1.1);
    }
  }
}

.messageArea {
  flex: 1 0 0px;
  height: 100%;
  display: flex;
  flex-direction: column;
  //padding: 50px 50px 50px 50px;
  z-index: 50;
}

.messageBarContainer {
  flex: 1 0 0;
  position: relative;
  overflow: hidden;
  &__scrollToEndControl {
    right: 25px;
    bottom: 10px;
    width: 35px;
    height: 35px;
    position: absolute;
    transition: bottom 0.5s linear;
  }

  &__scrollToEndControl--isHidden {
    bottom: -50px;
  }
}

.scrollToEndButton {
  width: 40px;
  height: 40px;
  opacity: 0.8;
  border-radius: 25px;
  background-color: rgb(117, 117, 117);
  color: white;
  border: none;
  padding: 3px;
  margin: 0;
  cursor: pointer;
  box-shadow: 1px 1px 10px 1px #00000070;
  &:focus {
    outline: none;
  }
}

.messageBar {
  overflow-y: scroll;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  background-color: #ffffff;
  padding: 5px 20px 5px 20px;
  position: relative;
  align-items: center;
  &__inner {
    max-width: 800px;
    width: 100%;
  }
  .backgroundElement {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    filter: blur(0px) contrast(100%) brightness(150%) grayscale(90%);
  }
  .bodyElement {
    position: relative;
  }
}

.messageCluster {
  display: flex;
  flex-direction: row;
  margin-bottom: 20px;

  &:hover {
  }

  .messageCluster__avatarSection {
    width: 50px;
    flex-basis: 50px;
    flex-shrink: 0;
    flex-grow: 0;
    padding-top: 4px;
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .messageCluster__contentSection {
    flex-shrink: 0;
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    flex-basis: 0;
  }

  .messageCluster__header {
    display: flex;
    flex-direction: row;
    height: 20px;
  }

  .messageCluster__body {
    display: flex;
    flex-direction: column;
    margin-bottom: 20px;
  }
}

.avatar {
  position: relative;
  .avatar__content {
    width: 35px;
    height: 35px;
    border-radius: 50%;
    background-color: #f1f1f1;
    overflow: hidden;
    .avatar__picture {
      width: 35px;
      height: 35px;
    }
  }

  .avatar__status {
    position: absolute;
    top: 28px;
    left: 3px;
    width: 7px;
    height: 7px;
    border-radius: 3.5px;
    opacity: 0.9;

    &--isOnline {
      background-color: rgb(15, 240, 15);
      border: 1px solid #dddddd;
    }

    &--isAway {
      background-color: rgb(155, 155, 155);
      border: 1px solid #eeeeee;
    }

    &--isOffline {
      background-color: rgb(0, 0, 0);
      border: 1px solid #eeeeee;
    }
  }
}

.messageCluster--inbound {
  .messageCluster__body {
    align-items: flex-start;
  }

  .message {
    background-color: #4c84ff;
    color: white;

    a.wysiwyg-mention {
      color: white;
      &:hover {
        color: #4c84ff;
        background-color: white;
        border-radius: 2px;
      }
    }

    &:first-of-type {
      border-radius: 0px 8px 8px 0px;
    }

    border-radius: 0px 8px 8px 0px;

    &:last-of-type {
      border-radius: 0px 8px 8px 8px;
    }
  }
}
/* ... */

